--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@
 
     .action {
         @apply flex text-lg w-fit whitespace-nowrap items-center
-            gap-1 rounded-lg
+            px-3 gap-1 rounded-lg
             text-primary hover:text-white hover:bg-primary
             border-2 border-primary
             active:translate-y-0.5
@@ -34,6 +34,6 @@
             transition-all
     }
     .action.icon {
-        @apply px-3 pr-4
+        @apply pr-4
     }
 }
