--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,4 +36,8 @@
     .action.icon {
         @apply pr-4
     }
+
+    .input {
+        @apply border-primary border-2 px-3 py-1 rounded-lg
+    }
 }
