--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,7 @@
     }
 
     .action {
-        @apply flex text-lg w-fit whitespace-nowrap items-center
+        @apply flex sm:text-lg w-fit whitespace-nowrap items-center
             px-3 gap-1 rounded-lg
             text-primary hover:text-white hover:bg-primary
             border-2 border-primary
